--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
+NODE_ENV=development
+
 HOST=0.0.0.0
 PORT=1337
+
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
