--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "fs-extra": "^9.0.1",
     "knex": "0.21.18",
+    "mysql": "^2.18.1",
     "sqlite3": "5.0.0",
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
