--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-HOST=0.0.0.0
-PORT=1337
+DATABASE_HOST=localhost 
+DATABASE_PORT=3306
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 APP_KEYS=
+JWT_SECRET=
+API_TOKEN_SALT=
